# mortgage_roofer

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  README.ru.md  TODO.md  compose.yml  docker-entrypoint.sh  opencode.json  test_config.json
.github/workflows/: rust.yml
mortgage_cli/: Cargo.toml  README.md  README.ru.md
mortgage_cli/src/: main.rs
mortgage_cli/tests/: cli_test.rs
mortgage_core/: Cargo.toml  README.md  README.ru.md
mortgage_core/src/: analysis.rs  calculator.rs  error.rs  euribor.rs  export.rs  lib.rs  models.rs  session.rs
mortgage_core/tests/: calculator_test.rs  models_test.rs  property_test.rs
mortgage_gui/: Cargo.toml  README.md  README.ru.md
mortgage_gui/src/: chart.rs  lib.rs  main.rs
mortgage_gui/tests/: gui_test.rs
mortgage_tui/: Cargo.toml  README.md  README.ru.md
mortgage_tui/src/: app.rs  main.rs  ui.rs
src/: main.rs  mortgage_logic.rs
