[workspace]
members = ["mortgage_core", "mortgage_cli", "mortgage_tui", "mortgage_gui"]
resolver = "3"

[workspace.dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
ureq = "3.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.29"
iced = "0.13"
printpdf = "0.7"
