[package]
name = "mortgage_core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
ureq = { workspace = true }
serde_json = { workspace = true }
